--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -33,6 +33,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  letter-spacing: 0.2em; 
   line-height: 1.2;
   font-weight: {{ headings_font_weight }};
   font-family: {{ headings_font_family }};
@@ -52,6 +53,7 @@ h2 {
 
 h3 {
   font-size: {{ h3_font_size }};
+  letter-spacing: 0.05em; 
   line-height: 1.5;
 }
 
@@ -63,7 +65,9 @@ h4 {
 }
 
 h5 {
+  color: #34b5e5;
   font-size: {{ h5_font_size }};
+  letter-spacing: 0; 
   line-height: 1.5;
 }
 
@@ -73,7 +77,7 @@ h6 {
 }
 
 strong {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 code {
