--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -44,11 +44,13 @@ h6 {
 h1 {
   font-size: {{ h1_font_size }};
   line-height: 1.3;
+  text-transform: uppercase; 
 }
 
 h2 {
   font-size: {{ h2_font_size }};
   line-height: 1.2;
+  text-transform: uppercase; 
 }
 
 h3 {
@@ -62,6 +64,7 @@ h4 {
   font-weight: normal;
   font-size: {{ h4_font_size }};
   line-height: 1.5;
+  text-transform: uppercase; 
 }
 
 h5 {
@@ -69,6 +72,7 @@ h5 {
   font-size: {{ h5_font_size }};
   letter-spacing: 0; 
   line-height: 1.5;
+  text-transform: uppercase; 
 }
 
 h6 {
