--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -11,16 +11,22 @@ body {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   font-family: {{ body_font_family }};
+  font-weight: 400; 
+  letter-spacing: 0.02em; 
+  line-height: 2; 
 }
 
 /* Anchor Links */
 a {
   color: {{ link_color }};
+  cursor: pointer; 
   text-decoration: none;
 }
+
 a:hover, a:focus {
+  color: {{ link_hover_color }};
   text-decoration: underline;
 }
 
@@ -32,9 +38,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem;
-  letter-spacing: 0.2em; 
-  line-height: 1.2;
+  margin-bottom: 1em;
   font-weight: {{ headings_font_weight }};
   font-family: {{ headings_font_family }};
   color: {{ headings_color }};
@@ -43,41 +47,44 @@ h6 {
 
 h1 {
   font-size: {{ h1_font_size }};
-  line-height: 1.3;
+  letter-spacing: 0.2em;
+  line-height: 1.1; 
   text-transform: uppercase; 
 }
 
 h2 {
   font-size: {{ h2_font_size }};
-  line-height: 1.2;
+  letter-spacing: 0.2em;
+  line-height: 1.2; 
   text-transform: uppercase; 
 }
 
 h3 {
   font-size: {{ h3_font_size }};
   letter-spacing: 0.05em; 
-  line-height: 1.5;
+  line-height: 1.16; 
 }
 
 h4 {
   font-family: {{ secondary_font_family }};
   font-weight: normal;
   font-size: {{ h4_font_size }};
-  line-height: 1.5;
+  letter-spacing: 0.2em;
+  line-height: 1.3; 
   text-transform: uppercase; 
 }
 
 h5 {
   color: #34b5e5;
   font-size: {{ h5_font_size }};
-  letter-spacing: 0; 
-  line-height: 1.5;
+  letter-spacing: 0.2em;
+  line-height: 1.22;
   text-transform: uppercase; 
 }
 
 h6 {
   font-size: {{ h6_font_size }};
-  line-height: 1.5;
+  line-height: 1.2;
 }
 
 strong {
@@ -88,15 +95,38 @@ code {
   vertical-align: bottom;
 }
 
+ul {
+  list-style: none;
+}
+
+ol {
+  list-style-position: inside; 
+}
+
 ul,
 ol {
+  padding-left: 0; 
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
+ul li:before {
+  content: "\f058"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  font-size: 1.429rem; 
+  line-height: 2; 
+  padding-right: 0.7143rem; 
+  color: #1287b3;
+  letter-spacing: 0;
+  vertical-align: middle;
+}
+
 ul li,
 ol li {
-  line-height: 1.5rem;
+  font-size: 1rem; 
+  line-height: 2.71; 
+  font-weight: 300; 
 }
 
 ul ul,
@@ -105,30 +135,25 @@ ul ol,
 ol ol {
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 2.857rem; 
 }
 
 blockquote {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  padding: 1.429rem 2.857rem; 
+  font-size: 1.429rem; 
+  line-height: 2.143rem; 
+  margin: 0;
+  border-left: 4px solid #34b5e5;
+  font-weight: 400;
+  letter-spacing: 0;
 }
 
 /* Horizontal Rules */
 hr {
-  color: #ccc;
-  background-color: #ccc;
+  color: #d0d0d0;
+  background-color: #d0d0d0;
   height: 1px;
   border: none;
-}
-
-/* TODO */
-small {
-
-}
-
-/* TODO */
-mark {
-
 }
 
 sup,
@@ -149,7 +174,7 @@ sub {
 
 :focus {
   outline: auto;
-  outline-color: green;
+  outline-color: #c168c2;
 }
 
 .disable-focus-styles :focus {
