--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -11,7 +11,8 @@
       overall number of calls -- here, you can use a single call to the gFonts api to get all the fonts you need
       https://developers.google.com/fonts/docs/getting_started
     #}
-    {{ require_css("https://fonts.googleapis.com/css?family=Work+Sans:400,600&display=swap") }}
+    {{ require_css("https://fonts.googleapis.com/css?family=Work+Sans:300,400,600&display=swap") }}
+    {{ require_css("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css") }}
     {{ require_js(get_asset_url("../../js/main.js")) }}
     {{ standard_header_includes }}
   </head>
