--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -1,77 +1,79 @@
 form {
-  max-width: {{ form_max_width }};
+  background-color: #f1f1f1; 
+  border: 1px solid {{ border_color }};
+  border-botton-left-radius: {{ border_radius }};
+  border-bottom-right-radius: {{ border_radius }};
   font-family: {{ secondary_font_family }};
+  max-width: {{ form_max_width }};
+  padding: 2.625rem;
+}
+
+h3.form-title {
+  background-color: #c168c2;
+  border-top-left-radius: {{ border_radius }};
+  border-top-right-radius: {{ border_radius }};
+  color: #fff; 
+  margin: 0; 
+  max-width: {{ form_max_width }};
+  padding: 2.875rem 2.625rem 2.4375rem;
+  text-transform: uppercase;  
 }
 
 .hs-button {
-  margin: 0;
+  background-color: {{ form_button_color }};
+  border: 1px solid {{ form_button_color }};
+  border-radius: {{ border_radius }};
+  color: {{ form_button_text_color }};
   cursor: pointer;
   display: inline-block;
-  font-weight: normal;
-  line-height: 1.1;
-  position: relative;
-  text-align: center;
-  transition: all 0.15s linear;
-  background-color: {{ form_button_color }};
-  border-color: {{ form_button_color }};
-  color: {{ form_button_text_color }};
-  border-radius: 6px;
-  border-style: solid;
-  border-width: 1px;
-  font-size: .92rem;
-  padding: 15px 53px;
-{# default "Get Free Widget" form (renders when no form is passed to the form HubL tag)
-  is an anchor (a.hs-button) rather than a real input, so it needs explcit css to avoid link styling #}
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.2em; 
+  margin: 0; 
+  padding: 0.8571rem;
+  text-align: center; 
   text-decoration: none;
+  text-transform: uppercase; 
+  transition: all 0.15s linear;
+  width: 100%; 
 }
 
-.hs-button:hover, .hs-button:focus {
+.hs-button:hover, 
+.hs-button:focus,
+.hs-button:active {
   background-color: {{ form_button_color_hover }};
   border-color: {{ form_button_color_hover }};
-{# see "no form selected" note above #}
   color: {{ form_button_text_color }};
 }
 
-.hs-button:active {
-  background-color: {{ form_button_color_active }};
-  border-color: {{ form_button_color_active }};
-}
-
-
 .hs-form label {
-  font-size: .83rem;
+  font-size: 1rem;
   color: {{ form_label_color }};
   display: block;
   float: none;
   width: auto;
-  font-weight: normal;
   text-align: left;
-  line-height: 1.2;
   padding-top: 0;
   margin-bottom: 4px;
 }
 
 .hs-error-msgs label {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   color: {{ form_error_label_color }};
 }
 
-.hs-input {
-  display: inline-block;
-  width: 100%;
-  height: 58px;
-  padding: 9px 10px;
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 22px;
+form input,
+form select,
+form textarea {
+  border: 1px solid {{ border_color }}; 
+  background-color: #fff; 
   color: {{ form_input_color }};
-  background-color: #ffffff;
-  border: 2px solid #D1D6DC;
-  box-sizing: border-box;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  border-radius: 3px;
+  display: inline-block; 
+  width: 100%; 
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
 }
 
 .hs-input[type=checkbox],
