Cleaning up remaining CSS files before starting on partials

--- a/src/css/_dnd_areas.css
+++ b/src/css/_dnd_areas.css
@@ -1,9 +1,12 @@
 .dnd-section {
-  padding: 80px 20px;
+  padding-top: {{ get_theme_style_setting('spacing.vertical_spacing', 'px') }};
+  padding-bottom: {{ get_theme_style_setting('spacing.vertical_spacing', 'px') }};
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .dnd-section > .row-fluid {
-  max-width: {{ dnd_section_max_width }};
+  max-width: {{ get_theme_style_setting('spacing.max_width', 'px') }};
   margin-left: auto;
   margin-right: auto;
 }
