--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -4,7 +4,7 @@ form {
   border-botton-left-radius: 4px;
   border-bottom-right-radius: 4px;
   font-family: {{ get_theme_style_setting('typography.body_font.font') }};
-  max-width: {{ form_max_width }};
+  max-width: 500px;
   padding: 2.6rem;
 }
 
