--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -6,7 +6,7 @@ body {
   color: {{ get_theme_style_setting('typography.body_font.color') }};
   font-family: {{ get_theme_style_setting('typography.body_font.font') }};
   font-size: 1rem;
-  line-height: 1.75;
+  line-height: 1.75rem;
 }
 
 p {
@@ -14,7 +14,7 @@ p {
   margin-bottom: 1em;
   font-weight: 400; 
   letter-spacing: 0.02em; 
-  line-height: 2; 
+  line-height: 1.5rem; 
 }
 
 /* Anchor Links */
@@ -47,7 +47,7 @@ h1 {
   font-family: {{ get_theme_style_setting('typography.heading_one.font') }};
   font-size: {{ get_theme_style_setting('typography.heading_one.size.value', 'typography.heading_one.size.units') }};
   letter-spacing: 0.2em;
-  line-height: 1.1; 
+  line-height: 2.75rem; 
   text-transform: uppercase; 
 }
 
@@ -56,7 +56,7 @@ h2 {
   font-family: {{ get_theme_style_setting('typography.heading_two.font') }};
   font-size: {{ get_theme_style_setting('typography.heading_two.size.value', 'typography.heading_two.size.units') }};
   letter-spacing: 0.2em;
-  line-height: 1.2; 
+  line-height: 2.25rem; 
   text-transform: uppercase; 
 }
 
@@ -65,7 +65,7 @@ h3 {
   font-family: font-family: {{ get_theme_style_setting('typography.heading_three.font') }};
   font-size: {{ get_theme_style_setting('typography.heading_three.size.value', 'typography.heading_three.size.units') }};
   letter-spacing: 0.05em; 
-  line-height: 1.16; 
+  line-height: 1.75rem; 
 }
 
 h4 {
@@ -74,7 +74,7 @@ h4 {
   font-size: {{ get_theme_style_setting('typography.heading_four.size.value', 'typography.heading_four.size.units') }};
   font-weight: normal;
   letter-spacing: 0.2em;
-  line-height: 1.3; 
+  line-height: 1.625rem; 
   text-transform: uppercase; 
 }
 
@@ -83,7 +83,7 @@ h5 {
   font-family: {{ get_theme_style_setting('typography.heading_five.font') }};
   font-size: {{ get_theme_style_setting('typography.heading_five.size.value', 'typography.heading_five.size.units') }};
   letter-spacing: 0.2em;
-  line-height: 1.22;
+  line-height: 1.375rem;
   text-transform: uppercase; 
 }
 
@@ -91,7 +91,7 @@ h6 {
   color: {{ get_theme_style_setting('typography.heading_six.color') }};
   font-family: {{ get_theme_style_setting('typography.heading_six.font') }};
   font-size: {{ get_theme_style_setting('typography.heading_six.size.value', 'typography.heading_six.size.units') }};
-  line-height: 1.2;
+  line-height: 1.125rem;
 }
 
 strong {
@@ -122,7 +122,7 @@ ul li:before {
   font-family: FontAwesome;
   display: inline-block;
   font-size: 1.43rem; 
-  line-height: 2; 
+  line-height: 2.5rem; 
   padding-right: 0.71rem; 
   color: {{ get_theme_style_setting('colors.primary_color.color') }};
   letter-spacing: 0;
@@ -132,7 +132,7 @@ ul li:before {
 ul li,
 ol li {
   font-size: 1rem; 
-  line-height: 2.71; 
+  line-height: 2.375rem; 
   font-weight: 300; 
 }
 
