--- a/src/modules/Menu section.module/module.css
+++ b/src/modules/Menu section.module/module.css
@@ -105,30 +105,13 @@
   visibility: hidden;
 }
 
-
-@media (min-width: 768px) and (max-width: 1100px) {
-  .navigation-primary a {
-    font-size: 20px;
-  }
-
+@media screen and (min-width: 768px) and (max-width: 1100px) {
   .submenu.level-1 > li {
-    padding: 22px 15px;
-  }
-
-  .submenu.level-1 > .has-submenu > .menu-arrow {
-    right: 3px;
-  }
-
-  .submenu.level-2 {
-    left: 0px;
+    margin-right: 20px; 
   }
 }
 
 @media (max-width: 767px) {
-  .navigation-primary a {
-    font-size: 26px;
-  }
-
   .navigation-primary {
     display: block;
   }
@@ -161,12 +144,11 @@
   .submenu.level-1 > li {
     display: block;
     width: 100%;
-    border-top: 2px solid #CED4DB;
+    border-top: 2px solid #d0d0d0;
     padding: 0;
   }
 
   .submenu.level-1 > li > a {
-    font-weight: 600;
     padding: 7px 30px;
   }
 
@@ -199,10 +181,6 @@
     transition: transform 0.4s;
   }
 
-  .triangle-container.level-2 {
-    display: none;
-  }
-
   input[type="checkbox"]:checked ~ .submenu {
     display: block;
   }
@@ -223,9 +201,8 @@
   }
 
   .submenu.level-2 .menu-item {
-    background-color: white;
     padding: 0;
-    border-top: 2px solid #EBEFF3;
+    border-top: 2px solid #d0d0d0;
     border-bottom: none;
   }
 
