--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -5,24 +5,18 @@
 <header class="header">
   <div class="header-container">
     <div class="row-fluid span12">
-        <div class="column span3">
-            <div class="header-logo">
-              {% module "site_logo" path="@hubspot/logo", label="Logo" %}
+        <div class="header-logo column span3">
+            {% module "site_logo" path="@hubspot/logo", label="Logo" %}
+        </div>
+        <div class="header-menu column span7">
+            <input type="checkbox" id="nav-toggle">
+            <label class="header-navigation-toggle" for="nav-toggle"></label>
+            <div class="header-navigation">
+              {% module "navigation-primary" path="../../modules/Menu section", label="Primary Navigation section" %}
             </div>
         </div>
-        <div class="column span6">
-            <div class="header-menu">
-              <input type="checkbox" id="nav-toggle">
-              <label class="header-navigation-toggle" for="nav-toggle"></label>
-              <div class="header-navigation">
-                {% module "navigation-primary" path="../../modules/Menu section", label="Primary Navigation section" %}
-              </div>
-            </div>
-        </div>
-        <div class="column span3">
-            <div class="cta">
-              {% module "cta" path="@hubspot/cta" label="Select a CTA" %}
-            </div>
+        <div class="cta column span2">
+            {% module "cta" path="@hubspot/cta" label="Select a CTA" %}
         </div>
     </div>
   </div>
