--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -8,89 +8,18 @@
 <main class="body-container-wrapper">
   {% dnd_area "dnd_area" class='body-container body-container__homepage', label='Main section' %}
 
-    {% dnd_section vertical_alignment='MIDDLE' %}
-      {% dnd_module path='@hubspot/linked_image', width=6 %}
-        {% module_attribute "label" %}Image{% end_module_attribute %}
-        {% module_attribute "img" is_json=True %}
-          {
-            "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-            "width": "550",
-            "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-            "size_type": "auto"
-          }
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-      {% dnd_column width=6, offset=6 %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/rich_text' %}
-            {% module_attribute "label" %}Rich text{% end_module_attribute %}
-            {% module_attribute "html"%}
-              <h1>This is your main headline.</h1>
-              <p>Use this space to tell everyone about what you have to offer.</p>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/form' %}
-            {% module_attribute "label"%}Form{% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
-
-    {% dnd_section vertical_alignment='MIDDLE' %}
-      {% dnd_module path='@hubspot/rich_text', width=6 %}
-        {% module_attribute "label" %}Rich text{% end_module_attribute %}
-        {% module_attribute "html"%}
-          <h2>Provide more details here.</h2>
-          <p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-      {% dnd_module path='@hubspot/linked_image', width=6, offset=6 %}
-        {% module_attribute "label" %}Image{% end_module_attribute %}
-        {% module_attribute "img" %}
-          {
-            "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-            "width": "550",
-            "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-            "size_type": "auto"
-          }
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-    {% end_dnd_section %}
-
-    {% dnd_section vertical_alignment='MIDDLE' %}
-      {% dnd_module path='@hubspot/linked_image', width=6 %}
-        {% module_attribute "label" %}Image{% end_module_attribute %}
-        {% module_attribute "img" is_json=True %}
-          {
-            "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-            "width": "550",
-            "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-            "size_type": "auto"
-          }
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-      {% dnd_module path='@hubspot/rich_text', width=6, offset=6 %}
-        {% module_attribute "label" %}Rich text{% end_module_attribute %}
-        {% module_attribute "html"%}
-          <h2>Provide more details here.</h2>
-          <p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-    {% end_dnd_section %}
-
+    {# Banner Section #}
     {% dnd_section max_width=700,
       padding={
-        'top': 140,
-        'bottom': 160,
+        'top': 120,
+        'bottom': 300,
         'left': 20,
         'right': 20
       },
       background_image={
         'backgroundPosition': 'MIDDLE_CENTER',
         'backgroundSize': 'cover',
-        'imageUrl': 'https://cdn2.hubspot.net/hubfs/6326501/boilerplate/large-placeholder-image.png'
+        'imageUrl': 'https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/Banner.png'
       },
       vertical_alignment='MIDDLE'
     %}
@@ -98,7 +27,7 @@
         {% dnd_row
           padding={
             'top': 0,
-            'bottom': 40,
+            'bottom': 0,
             'left': 0,
             'right': 0
           }
@@ -107,96 +36,188 @@
           {% module_attribute "label" %}Rich text{% end_module_attribute %}
           {% module_attribute "html"%}
             <div style="text-align: center">
-              <h2 style="">Provide an excerpt here</h2>
-              <p style="">Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
+              <h1>Perfect Saves Time.</h1>
+              <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
             </div>
           {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module path='../modules/Customizable button', flexbox_positioning='MIDDLE_CENTER' %}
-          {% module_attribute "label"%}Button{% end_module_attribute %}
-          {% module_attribute "link"%}#{% end_module_attribute %}
-          {% module_attribute "button_text" %}CLICK HERE{% end_module_attribute %}
+            {% module_attribute "label"%}Button{% end_module_attribute %}
+            {% module_attribute "link"%}#{% end_module_attribute %}
+            {% module_attribute "button_text" %}Free Trial{% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
 
-    {% dnd_section vertical_alignment='MIDDLE' %}
-      {% dnd_column width=4 %}
+    {# Three Column Feature Section #}
+      {% dnd_section %}
+        {% dnd_column %}
+          {% dnd_row %}
+            {% dnd_module path='@hubspot/header', flexbox_positioning='MIDDLE_CENTER'  %}
+              {% module_attribute "label" %}Header{% end_module_attribute %}
+              {% module_attribute "header_tag"%}h2{% end_module_attribute %}
+              {% module_attribute "value"%}Headlines and Mission Statements for Days{% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module 
+              path='../modules/Feature',
+              offset=0,
+              width=4,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Feature{% end_module_attribute %}
+            {% end_dnd_module %}
+            {% dnd_module
+              path='../modules/Feature' ,
+              offset=4,
+              width=4,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Feature{% end_module_attribute %}
+            {% end_dnd_module %}
+            {% dnd_module 
+              path='../modules/Feature',
+              offset=8,
+              width=4,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Feature{% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module path='../modules/Customizable button', flexbox_positioning='MIDDLE_CENTER' %}
+              {% module_attribute "label"%}Button{% end_module_attribute %}
+              {% module_attribute "link"%}#{% end_module_attribute %}
+              {% module_attribute "button_text" %}View Features{% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
+
+    {# Two Column With Image Left Section #}
+    {% dnd_section
+      background_color={
+        r: 52,
+        g: 181,
+        b: 229,
+        a: 1.0
+      }
+    %}
+      {% dnd_module path='@hubspot/image',
+        offset=0,
+        width=6,
+        flexbox_positioning='MIDDLE_CENTER'  
+      %}
+        {% module_attribute "label" %}Image{% end_module_attribute %}
+        {% module_attribute "src"%}https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/Banner.png{% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module path='@hubspot/rich_text',
+        offset=6,
+        width=6,
+        flexbox_positioning='MIDDLE_CENTER'  
+      %}
+        {% module_attribute "label" %}Rich Text{% end_module_attribute %}
+        {% module_attribute "html"%}
+          <div style="text-align: center">
+            <h2>Full Control</h2>
+            <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+            <ul>
+              <li>Someting awesome here</li>
+              <li>Someting awesome here</li>
+              <li>Someting awesome here</li>
+            </ul>
+          </div>
+        {% end_module_attribute %}
+      {% end_dnd_module %}
+    {% end_dnd_section %}
+
+
+    {# Statistics Section #}
+      {% dnd_section %}
+        {% dnd_column %}
+          {% dnd_row %}
+            {% dnd_module path='@hubspot/rich_text',
+              flexbox_positioning='MIDDLE_CENTER'  
+            %}
+              {% module_attribute "label" %}Rich Text{% end_module_attribute %}
+              {% module_attribute "html"%}
+                <div style="text-align: center">
+                  <h2>All the Stats</h2>
+                  <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                </div>
+              {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module 
+              path='../modules/Statistic',
+              offset=0,
+              width=3,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Statistic{% end_module_attribute %}
+            {% end_dnd_module %}
+            {% dnd_module 
+              path='../modules/Statistic',
+              offset=3,
+              width=3,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Statistic{% end_module_attribute %}
+            {% end_dnd_module %}
+            {% dnd_module 
+              path='../modules/Statistic',
+              offset=6,
+              width=3,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Statistic{% end_module_attribute %}
+            {% end_dnd_module %}
+            {% dnd_module 
+              path='../modules/Statistic',
+              offset=9,
+              width=3,
+              flexbox_positioning='MIDDLE_CENTER' 
+            %}
+              {% module_attribute "label"%}Statistic{% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
+
+
+    {# Testimonial Section #}
+    {% dnd_section %}
+      {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module path='@hubspot/linked_image' %}
-            {% module_attribute "label" %}Image{% end_module_attribute %}
-            {% module_attribute "img" is_json=True %}
-              {
-                "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-                "width": "550",
-                "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-                "size_type": "auto"
-              }
-            {% end_module_attribute %}
-          {% end_dnd_module %}
+          {# Header #}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path='@hubspot/rich_text'%}
-            {% module_attribute "label" %}Rich text{% end_module_attribute %}
-            {% module_attribute "html"%}
-              <h3>Feature one</h3>
-              <p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column width=4, offset=4 %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/linked_image' %}
-            {% module_attribute "label" %}Image{% end_module_attribute %}
-            {% module_attribute "img" is_json=True %}
-              {
-                "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-                "width": "550",
-                "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-                "size_type": "auto"
-              }
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/rich_text' %}
-            {% module_attribute "label" %}Rich text{% end_module_attribute %}
-            {% module_attribute "html"%}
-              <h3>Feature two</h3>
-              <p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column width=4, offset=8 %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/linked_image' %}
-            {% module_attribute "label" %}Image{% end_module_attribute %}
-            {% module_attribute "img" is_json=True %}
-              {
-                "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
-                "width": "550",
-                "alt": "Stock placeholder image with grayscale geometrical mountain landscape",
-                "size_type": "auto"
-              }
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module path='@hubspot/rich_text' %}
-            {% module_attribute "label" %}Rich text{% end_module_attribute %}
-            {% module_attribute "html"%}
-              <h3>Feature three</h3>
-              <p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
+          {# Testimonials#}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+
+    {# Logo Section #}
+    {% dnd_section %}
+      {# Linked Image #}
+      {# Linked Image #}
+      {# Linked Image #}
+      {# Linked Image #}
+      {# Linked Image #}
+      {# Linked Image #}
+    {% end_dnd_section %}
+
+    {# Call to Action Section #}
+    {% dnd_section %}
+      {# Rich Text #}
+    {% end_dnd_section %}
+
   {% end_dnd_area %}
+  {% global_partial path="../partials/blog_subscription.html" %}
 </main>
 {% endblock body %}
