Ensuring unique module names in global partials

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -6,17 +6,17 @@
   <div class="header-container">
     <div class="row-fluid span12">
         <div class="header-logo column span3">
-            {% module "site_logo" path="@hubspot/logo", label="Logo" %}
+            {% module "header_logo" path="@hubspot/logo", label="Logo" %}
         </div>
         <div class="header-menu column span7">
             <input type="checkbox" id="nav-toggle">
             <label class="header-navigation-toggle" for="nav-toggle"></label>
             <div class="header-navigation">
-              {% module "navigation-primary" path="../../modules/Menu section", label="Primary Navigation section" %}
+              {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation section" %}
             </div>
         </div>
         <div class="cta column span2">
-            {% module "cta" path="@hubspot/cta" label="Select a CTA" %}
+            {% module "header_cta" path="@hubspot/cta" label="Select a CTA" %}
         </div>
     </div>
   </div>
