--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -8,7 +8,7 @@
         <div class="row-fluid span12">
             <div class="column span4">
               <div class="footer-logo">
-                  {% module "site_logo" path="@hubspot/logo", label="Logo" %}
+                  {% module "footer_logo" path="@hubspot/logo", label="Logo" %}
               </div>
               <div class="follow-me">
                 {% module_block module "footer_social" path="../../modules/Social follow" label="Social Follow" %}
@@ -24,25 +24,25 @@
               </div>
             </div>
             <div class="footer-navigation column span2">
-              {% module "menu_header_one" path="@hubspot/header" header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 1' %}
+              {% module "footer_menu_header_one" path="@hubspot/header" header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 1' %}
               {% module_block module "footer_menu_one" path="@hubspot/simple_menu" overrideable=True, orientation='vertical', label='Menu Column 1'  %}
                 {% module_attribute "menu_tree" is_json=True %}[{"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}]{% end_module_attribute %}
               {% end_module_block %}
             </div>
             <div class="footer-navigation column span2">
-              {% module "menu_header_two" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 2' %}
+              {% module "footer_menu_header_two" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 2' %}
               {% module_block module "footer_menu_two" path="@hubspot/simple_menu" overrideable=True, orientation='vertical', label='Menu Column 1'  %}
                 {% module_attribute "menu_tree" is_json=True %}[{"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}]{% end_module_attribute %}
               {% end_module_block %}
             </div>
             <div class="footer-navigation column span2">
-              {% module "menu_header_three" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 3' %}
+              {% module "footer_menu_header_three" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 3' %}
               {% module_block module "footer_menu_three" path="@hubspot/simple_menu" overrideable=True, orientation='vertical', label='Menu Column 1'  %}
                 {% module_attribute "menu_tree" is_json=True %}[{"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}]{% end_module_attribute %}
               {% end_module_block %}
             </div>
             <div class="footer-navigation column span2">
-              {% module "menu_header_four" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 4' %}
+              {% module "footer_menu_header_four" path="@hubspot/header", header_tag='h6', overrideable=True, value='Menu Title', label='Menu Title Column 4' %}
               {% module_block module "footer_menu_four" path="@hubspot/simple_menu" overrideable=True, orientation='vertical', label='Menu Column 1'  %}
                 {% module_attribute "menu_tree" is_json=True %}[{"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}, {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Linked Page", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}]{% end_module_attribute %}
               {% end_module_block %}
